--- a/04-build-a-data-lake/etl.ipynb
+++ b/04-build-a-data-lake/etl.ipynb
@@ -18,7 +18,7 @@
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.types import StructType, StructField, DoubleType, StringType, IntegerType, DateType, TimestampType\n",
     "\n",
-    "import pyspark.sql.functions as F"
+    "import pyspark.sql.functions as F\n"
    ]
   },
   {
