--- a/04-build-a-data-lake/workshop/dataset/workshop.ipynb
+++ b/04-build-a-data-lake/workshop/dataset/workshop.ipynb
@@ -76,7 +76,140 @@
    "id": "a5318f01-6ecc-4222-87d1-1198958f8e5e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "product_df = spark \\\n",
+    "    .read \\\n",
+    "    .option(\"header\", True) \\\n",
+    "    .csv(product_data_folder).show(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ab69296",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product_df.show(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c0ed624",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "store_df = spark \\\n",
+    "    .read \\\n",
+    "    .option(\"header\", True) \\\n",
+    "    .csv(store_data_folder).show(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edfd6965",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "store_df.show(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb5c4045",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df = spark \\\n",
+    "    .read \\\n",
+    "    .option(\"header\", True) \\\n",
+    "    .csv(transaction_data_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "baba2b90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.show(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fa428a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product_df.createOrReplaceTempView(\"products\")\n",
+    "transaction_df.createOrReplaceTempView(\"transactions\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "994ae435",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = spark.sql(\"\"\"\n",
+    "    select\n",
+    "        products.upc\n",
+    "        , min(price)\n",
+    "        , max(price)\n",
+    "        , description\n",
+    "        , category\n",
+    "        \n",
+    "    from transactions\n",
+    "    join products\n",
+    "    on\n",
+    "        transactions.upc = products.upc\n",
+    "    group by 1, 4, 5\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fe7a3c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.show(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68fbc65c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = spark.sql(\"\"\"\n",
+    "    select\n",
+    "        upc\n",
+    "        , product_size\n",
+    "        , case\n",
+    "            when contains(product_size, 'OZ') then 'yes'\n",
+    "        end as is_oz\n",
+    "    from products\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0574952c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2.show(3)"
+   ]
   }
  ],
  "metadata": {
